fix(front): remove result card and align submenu with match detail container

--- a/front/src/app/pages/national-team/senior/matchs/senior-national-team-match-detail.component.scss
+++ b/front/src/app/pages/national-team/senior/matchs/senior-national-team-match-detail.component.scss
@@ -1,5 +1,4 @@
 .match-page {
-  max-width: 1200px;
 
   .back-link {
     display: inline-block;
